@startuml bomberman
interface Collidable {}

class Collision {
    - map : Map
    + detectCollisions(collidable: Collidable)
}
Collision --> Collidable

class Player implements Collidable {}
class PlayerAnimations {}
Player --> PlayerAnimations

class Map {}

class Model {}
Model --> Collision
Model --> Map
@enduml
